Fix chip vertical scrollbar #521

--- a/src/_chips.scss
+++ b/src/_chips.scss
@@ -9,7 +9,7 @@
   line-height: $unit-4;
   margin: $unit-h;
   max-width: $control-width-sm;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: $unit-1 $unit-2;
   text-decoration: none;
   text-overflow: ellipsis;
